# superpopaul

./: .gitignore  CLAUDE.md  LICENSE  NOTICE-OUVERTURE.md  README.md
.github/workflows/: windows.yml
cli/: README.md  popaul.ps1  popaul.py
cli/tests/: test_popaul.py
client/: README.md
client/src/: app.js  cockpit.js  columns.js  index.html  styles.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/examples/: dns_stress.rs
client/src-tauri/src/: api.rs  commands.rs  config.rs  coverage.rs  csv_io.rs  ctc.rs  direct.rs  directory.rs  lib.rs  modes.rs  output.rs  pid.rs  ppf.rs  repartition.rs  report.rs  resolver.rs  securisation.rs  store.rs  telemetry.rs
deploy/: install.sh  nginx-peppol-api.conf  peppol-api.keys.example  peppol-api.service
docs/: deploiement-ovh.md  legende_champs.md  make_swagger_png.sh
docs/plans/: 2026-07-12-super-popaul.md  2026-07-13-superpopaul-colonnes-dropzone.md  2026-07-14-calibrate-bench.md  2026-07-14-calibrate-modal.md
docs/specs/: 2026-07-12-super-popaul-design.md  2026-07-12-superpopaul-sortie-encodage-separateur-design.md  2026-07-12-superpopaul-tooltips-design.md  2026-07-13-superpopaul-colonnes-dropzone-design.md  2026-07-14-calibrate-bench-design.md  2026-07-14-calibrate-modal-design.md
docs/superpowers/plans/: 2026-07-18-annuaire-peppol-directory.md  2026-07-18-profil-nom-et-triptyque.md  2026-07-18-refonte-profils-onglets.md  2026-07-19-annuaire-ppf.md  2026-07-19-champs-ppf-format.md  2026-07-19-colonne-annuaire-peppol.md  2026-07-19-presence-annuaire-dashboard-rapport.md  2026-07-19-securisation-montee-en-charge.md  2026-07-20-motifs-ppf-actifs-configurables.md  2026-07-24-repartition-cf-par-plateforme.md
docs/superpowers/specs/: 2026-07-18-annuaire-peppol-directory-design.md  2026-07-18-profil-nom-et-triptyque-design.md  2026-07-18-refonte-profils-onglets-design.md  2026-07-19-champs-ppf-format-design.md  2026-07-19-colonne-annuaire-peppol-design.md  2026-07-19-ppf-directory-design.md  2026-07-19-presence-annuaire-dashboard-rapport-design.md  2026-07-19-securisation-montee-en-charge-design.md  2026-07-20-motifs-ppf-actifs-configurables-design.md  2026-07-24-repartition-cf-par-plateforme-design.md
scripts/: make_icon.py
server/: README.md  peppol_api.py  peppol_resolver.py  peppol_resolver_rest.py  requirements.txt
server/tests/: test_http_keepalive.py  test_peppol_api.py  test_peppol_resolver.py
server/tools/: profil_resolution.py
src/: app.js  cockpit.js  columns.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: dns_stress.rs
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  commands.rs  config.rs  csv_io.rs  direct.rs  lib.rs  main.rs  modes.rs  output.rs  pid.rs  resolver.rs  store.rs  telemetry.rs
