[package]
name = "superpopaul"
version = "0.1.0"
edition = "2021"

[lib]
name = "superpopaul_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
csv = "1.3"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
encoding_rs = "0.8"
encoding_rs_io = "0.1"
chardetng = "0.1"
thiserror = "1"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
