[package]
name = "superpopaul"
version = "0.3.6"
edition = "2021"

[lib]
name = "superpopaul_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
# Ouverture d'URL externes dans le navigateur (lien GitHub du pied de page) —
# un <a href> ne quitte pas la webview.
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
csv = "1.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
# native-roots : magasin de certificats du poste (Windows/Keychain) et non le
# bundle Mozilla embarqué — requis derrière les proxys/inspections TLS
# d'entreprise (CA racine déployée par l'AD).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
encoding_rs = "0.8"
encoding_rs_io = "0.1"
thiserror = "1"
# Résolution directe SML+SMP (mode « direct », parité peppol_resolver.py)
sha2 = "0.10"
data-encoding = "2"           # base32 (hostname SML) + base64 (certificat SMP)
roxmltree = "0.20"            # parsing des réponses XML SMP
x509-parser = "0.16"          # identification de la PA via le certificat AS4
hickory-resolver = "0.24"     # NAPTR via le DNS système
hickory-proto = "0.24"        # encodage des requêtes DNS pour le DoH (RFC 8484)
percent-encoding = "2"        # encodage du PID dans les URL SMP (parité quote(safe=''))

[target.'cfg(unix)'.dependencies]
libc = "0.2"                  # setrlimit : relever le soft 256 fd des apps GUI macOS

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
# start_paused pour les tests du breaker (le backoff 30 s s'écoule en virtuel)
tokio = { version = "1", features = ["test-util"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
